--- a/WebForm/Pages/Index.cshtml
+++ b/WebForm/Pages/Index.cshtml
@@ -2,6 +2,7 @@
 @model IndexModel
 @{
     ViewData["Title"] = "Website Quản Lý Tour";
+    Layout = "_Layout";
 
 }
 @using BUS;
@@ -23,7 +24,7 @@
                     <div class="card-body">
                         <h4 class="card-title">Danh sách Tour</h4>
                         <form class="form-inline">
-                            <button type="button" class="btn btn-primary mb-2" onclick="ThemTour()">
+                            <button type="button" class="btn btn-primary mb-2" onclick="btnclick()">
                                 Thêm
                             </button>
                             <input type="text" class="form-control mb-2 mr-sm-2" style="margin-left:" id="inlineFormInputName2" placeholder="Tên Tour">
@@ -67,36 +68,56 @@
 </div>
 
 <!-- Form thêm -->
-<dialog id="them-tour" style="display:none">
-    <div class="auth-form-light text-left py-5 px-4 px-sm-5">
-        <h4>Thêm Tour</h4>
-        <form class="pt-3">
-            <div class="form-group">
-                <input type="text" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="ID Tour">
+<asp:Content ID="Content2" ContentPlaceHolderID="ControlsSection" runat="server">
+    <asp:UpdatePanel ID="Update" runat="server" UpdateMode="Always">
+        <ContentTemplate>
+            <div class="control">
+                <ej:Button ID="btnOpen" Type="Button" Text="Click to open dialog" ClientSideOnClick="btnclick" CssClass="e-btn" runat="server"></ej:Button>
+                <ej:Dialog ID="lognForm" Title="Login Form" Containment=".control" ClientSideOnClose="onDialogClose" IsResponsive="True" Width="300px" EnableModal="true" EnableResize="false" runat="server">
+                    <DialogContent>
+                        <table>
+                            <tr>
+                                <td>
+                                    <p style="margin-top: 5px;">
+                                        Please enter your username and password
+                                    <p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    Username
+                                    <p class="reqired">*</p>
+                                    <input type="text" id="txtName" name="txtName" class="ejinputtext" style="width: 100%" required /><br />
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    Password
+                                    <p class="reqired">*</p>
+                                    <input type="password" id="txtPassword" name="txtPassword" class="ejinputtext" style="width: 100%" required />
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <input type="checkbox" id="txtRember" class="ejinputtext" required />
+                                </td>
+                            </tr>
+                            <tr>
+                                <td align="center">
+                                    <br />
+                                    <ej:Button ID="downloadBtn" Text="LOGIN" CssClass="e-btn" Width="100px" Height="30px" runat="server" Size="Medium" Type="Button" ClientSideOnClick="formsubmit"></ej:Button>
+                                    <label class="error" for="btn"></label>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td align="center" style="font-size: 12px; padding-top: 8px;">
+                                    Don't have an account ? <a href="#">Signup</a>
+                                </td>
+                            </tr>
+                        </table>
+                    </DialogContent>
+                </ej:Dialog>
             </div>
-            <div class="form-group">
-                <input type="text" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Tên Tour">
-            </div>
-            <div class="form-group">
-                <input type="text" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Đặc Điểm">
-            </div>
-            <div class="form-group">
-                <select class="form-control form-control-lg" id="exampleFormControlSelect2">
-                    <option>ID Loại</option>
-                    <option>Loại 1</option>
-                    <option>Loại 2</option>
-                </select>
-            </div>
-            <div class="mt-3">
-                <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">
-                    Thêm
-                </a>
-                <a class="btn btn-block btn-warning btn-lg font-weight-medium auth-form-btn">
-                    Hủy
-                </a>
-            </div>
-        </form>
-    </div>
-</dialog>
-
-
+        </ContentTemplate>
+    </asp:UpdatePanel>
+</asp:Content>
