--- a/WebForm/Pages/Shared/QuanLyDiaDiem.cshtml
+++ b/WebForm/Pages/Shared/QuanLyDiaDiem.cshtml
@@ -58,3 +58,27 @@
         </div>
     </div>
 </div>
+
+<!-- Form thêm -->
+<dialog id="them-tour" style="display:none">
+    <div class="auth-form-light text-left py-5 px-4 px-sm-5">
+        <h4>Thêm Tour</h4>
+        <form class="pt-3">
+            <div class="form-group">
+                
+                <input type="text" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="ID Địa Điểm" >
+            </div>
+            <div class="form-group">
+                <input type="text" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Tên Địa Điểm" >
+            </div>
+            <div class="mt-3">
+                <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">
+                    Thêm
+                </a>
+                <a class="btn btn-block btn-warning btn-lg font-weight-medium auth-form-btn">
+                    Hủy
+                </a>
+            </div>
+        </form>
+    </div>
+</dialog>
