--- a/WebForm/Pages/Shared/QuanLyKhachHang.cshtml
+++ b/WebForm/Pages/Shared/QuanLyKhachHang.cshtml
@@ -54,11 +54,12 @@
                                                 <td>@item.Quoctich</td>
                                                 <td>
                                                     <button type="button" class="btn btn-warning">Sửa</button>
-                                                    <button type="button" class="btn btn-danger">Xóa</button>
+                                                    <button type="button" class="btn btn-danger" onclick="return confirm('Bạn có chắc chắn xóa khách hàng này không?');">Xóa</button>
                                                 </td>
                                             </tr>
                                         }
                                     }
+
                                 </tbody>
                             </table>
                         </div>
