--- a/WebForm/Pages/Shared/QuanLyDiaDiem.cshtml
+++ b/WebForm/Pages/Shared/QuanLyDiaDiem.cshtml
@@ -20,12 +20,9 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Danh sách Địa Điểm</h4>
-                        <form class="form-inline" method="post">
-                            <button type="button" class="btn btn-primary mb-2">
-                                <a asp-page="/Shared/QuanLyDiaDiem_Them">Thêm</a>
-                            </button>
-                            <input type="text" class="form-control mb-2 mr-sm-2" style="margin-left:" id="inlineFormInputName2" placeholder="...">
-                        </form>
+                            <a class="btn btn-primary mb-2" asp-page="/Shared/QuanLyDiaDiem_Them">
+                                Thêm
+                            </a>
                         <div class="table-responsive">
                             <table class="table table-striped">
                                 <thead>
