--- a/WebForm/Pages/Shared/QuanLyDiaDiem_Them.cshtml
+++ b/WebForm/Pages/Shared/QuanLyDiaDiem_Them.cshtml
@@ -2,9 +2,12 @@
 @model WebForm.Pages.Shared.QuanLyDiaDiem_ThemModel
 @{
     ViewData["Title"] = "Website Quản Lý Tour";
-    Layout = "QuanLyDiaDiem";
+    Layout = "_Layout";
 }
-
+@using BUS;
+@{ 
+    DiaDiemBUS bus = new DiaDiemBUS();
+} 
 <div class="main-panel">
     <div class="content-wrapper">
         <div class="row">
@@ -12,18 +15,26 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Thêm Địa Điểm</h4>
-                        <form class="forms-sample">
+                        <form class="forms-sample" method="post">
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Địa Điểm</label>
-                                <input type="text" class="form-control" placeholder="Mã Địa Điểm">
+                                <input type="text" class="form-control" value="@bus.MakeID()" asp-for="diadiem.Id_DiaDiem" placeholder="Mã Địa Điểm" readonly>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Tên Địa Điểm</label>
-                                <input type="text" class="form-control" placeholder="Tên Địa Điểm">
+                                <input type="text" class="form-control" asp-for="diadiem.Ten_DiaDiem" placeholder="Tên Địa Điểm">
                             </div>
-                            <button type="submit" class="btn btn-primary mr-2">Thêm</button>
-                            <button class="btn btn-light">Hủy</button>
+                            <input type="submit" value="Thêm" asp-page-handler="AddDiaDiem" class="btn btn-primary mr-2"/>
+                            <a class="btn btn-light">Hủy</a>
                         </form>
+                        @if (ViewData["Message"] != null)
+                        {
+                            <script type="text/javascript">
+                                window.onload = function () {
+                                alert("@ViewData["Message"]");
+                            };
+                            </script>
+                        }
                     </div>
                 </div>
             </div>
