--- a/WebForm/Pages/Shared/QuanLyPhanCong.cshtml
+++ b/WebForm/Pages/Shared/QuanLyPhanCong.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Website Quản Lý Tour";
     Layout = "_Layout";
 
-}
+}@using Microsoft.AspNetCore.Http;
 @using BUS;
 @using DTO;
 @{
@@ -20,12 +20,18 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Danh sách Phân Công</h4>
-                        <form class="form-inline">
-                            <button type="button" class="btn btn-primary mb-2" onclick="ThemPhanCong()">
-                                Thêm
-                            </button>
-                            <input type="text" class="form-control mb-2 mr-sm-2" style="margin-left:" id="inlineFormInputName2" placeholder="...">
-                        </form>
+                        @{
+                            try
+                            {
+                                if (HttpContext.Session.GetString("xoaphancong") == "thanhcong")
+                                {
+                                    <h5 style="background-color: forestgreen">Xóa thành công</h5>
+                                    HttpContext.Session.Remove("xoaphancong");
+                                }
+                            }
+                            catch (Exception e) { }
+                        }
+                        <a class="btn btn-primary mb-2" asp-page="/Shared/QuanLyPhanCong_Them">Thêm</a>
                         <div class="table-responsive">
                             <table class="table table-striped">
                                 <thead>
@@ -45,8 +51,11 @@
                                                 <td>@item.Id_NV</td>
                                                 <td>@item.Nhiemvu</td>
                                                 <td>
-                                                    <button type="button" class="btn btn-warning">Sửa</button>
-                                                    <button type="button" class="btn btn-danger">Xóa</button>
+                                                    <input type="hidden" asp-for="phancong.Id_Doan" value="@item.Id_Doan" />
+                                                    <input type="hidden" asp-for="phancong.Id_NV" value="@item.Id_NV" />
+                                                    <input type="hidden" asp-for="phancong.Nhiemvu" value="@item.Nhiemvu" />
+                                                    <input type="submit" asp-page-handler="edit" value="Sửa" class="btn btn-warning" />
+                                                    <input type="submit" asp-page-handler="delete" value="Xóa" class="btn btn-danger" />
                                                 </td>
                                             </tr>
                                         }
