--- a/WebForm/Pages/Shared/QuanLyPhanCong_Them.cshtml
+++ b/WebForm/Pages/Shared/QuanLyPhanCong_Them.cshtml
@@ -15,16 +15,20 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Thêm Phân Công</h4>
-                        <form class="forms-sample">
+                        <form class="forms-sample" method="post">
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Đoàn</label>
-                                <input type="text" class="form-control" asp-for="phancong.Id_Doan"
-                                       placeholder="Mã Đoàn" readonly>
+                                <select class="js-example-basic-single w-100" asp-for="phancong.Id_Doan">
+                                    <option value="D01">D01</option>
+                                    <option value="D02">D02</option>
+                                </select>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Mã Nhân Viên</label>
-                                <input type="text" class="form-control" asp-for="phancong.Id_NV" 
-                                       placeholder="Mã Nhân Viên" readonly> 
+                                <select class="js-example-basic-single w-100" asp-for="phancong.Id_NV">
+                                    <option value="NV01">NV01</option>
+                                    <option value="NV02">NV02</option>
+                                </select>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputName1">Nhiệm vụ</label>
